   - BandwidthDetection was being used for tun interfaces even when the
     Linux kernel had the information hardcoded to 10 Mbit regardless of the
     used real interface, interface specific MaxBW will now be used instead
     or MaxBandwidth as fallback
   - Configured interface specific MaxBW values were getting overridden by
     BandwidthDetection when something could be detected
 - New
   - Add the possibility of specifying an interface without using the
     -i / --iface options (vnstat and vnstati)
   - Add configuration option UseUTC for using UTC as timezone for database
     entries instead of following the system timezone configuration
   - --iflist uses user configured interface specific MaxBW values in the
     output when available instead of showing only the kernel provided
     information when detected
   - Image output example cgi (examples/vnstat.cgi) automatically lists
     all monitored interfaces instead of requiring the list to be filled
     manually, server name in page title comes from hostname command
   - Image output example cgi (examples/vnstat.cgi) provides links for most
     available images to more detailed or longer versions of each image
   - Image output example cgi (examples/vnstat.cgi) allows direct interface
     specific page access with /interfacename suffix for the cgi if the
     used httpd supports PATH_INFO
   - Image output uses LibGD filled arc bug workaround only for LibGD
     versions that are known to be broken


2.7 / 16-May-2021

 - Fixed
   - Possibility of segmentation fault with image list output when database
     existed but no data was available
   - ./configure output could show invalid install paths with some parameter
     combinations (pull request by Severin Glöckner)
   - Columns in text hours graph output could get misaligned if the selected
     system locale used a UTF-8 sequence for the thousands separator instead
     of a single character
 - New