@@ -650,17 +650,29 @@ START_TEST(element_output_check)
 	drawlegend(&ic, 1130, 140, 0);
 	drawlegend(&ic, 1330, 140, 1);
 
-	drawbar(&ic, 1050, 160, 400, 50, 50, 100, 0);
-	drawbar(&ic, 1050, 180, 400, 25, 75, 100, 0);
-	drawbar(&ic, 1050, 200, 400, 75, 25, 100, 0);
-	drawbar(&ic, 1050, 220, 400, 0, 100, 100, 0);
-	drawbar(&ic, 1050, 240, 400, 100, 0, 100, 0);
+	drawbar(&ic, 1050, 160, 100, 50, 50, 100, 0);
+	drawbar(&ic, 1050, 180, 100, 25, 75, 100, 0);
+	drawbar(&ic, 1050, 200, 100, 75, 25, 100, 0);
+	drawbar(&ic, 1050, 220, 100, 0, 100, 100, 0);
+	drawbar(&ic, 1050, 240, 100, 100, 0, 100, 0);
 
-	drawbar(&ic, 1050, 260, 400, 50, 50, 130, 0);
-	drawbar(&ic, 1050, 280, 400, 25, 75, 130, 0);
-	drawbar(&ic, 1050, 300, 400, 75, 25, 130, 0);
-	drawbar(&ic, 1050, 320, 400, 0, 100, 130, 0);
-	drawbar(&ic, 1050, 340, 400, 100, 0, 130, 0);
+	drawbar(&ic, 1050, 260, 100, 1, 99, 100, 0);
+	drawbar(&ic, 1050, 280, 100, 2, 98, 100, 0);
+
+	drawbar(&ic, 1050, 300, 100, 99, 1, 100, 0);
+	drawbar(&ic, 1050, 320, 100, 98, 2, 100, 0);
+
+	drawbar(&ic, 1200, 160, 100, 1, 0, 100, 0);
+	drawbar(&ic, 1200, 180, 100, 2, 0, 100, 0);
+	drawbar(&ic, 1200, 200, 100, 3, 0, 100, 0);
+
+	drawbar(&ic, 1200, 220, 100, 0, 1, 100, 0);
+	drawbar(&ic, 1200, 240, 100, 0, 2, 100, 0);
+	drawbar(&ic, 1200, 260, 100, 0, 3, 100, 0);
+
+	drawbar(&ic, 1200, 280, 100, 25, 25, 100, 0);
+	drawbar(&ic, 1200, 300, 100, 10, 30, 100, 0);
+	drawbar(&ic, 1200, 320, 100, 30, 10, 100, 0);
 
 	gdImageLine(ic.im, 1040, 360, 1260, 360, ic.ctext);
 	gdImageLine(ic.im, 1040, 760, 1260, 760, ic.ctext);
