@@ -18,6 +18,8 @@
      or MaxBandwidth as fallback
    - Configured interface specific MaxBW values were getting overridden by
      BandwidthDetection when something could be detected
+   - Image output horizontal rx/tx bars often had one pixel too much width in
+     the tx section resulting in slightly wrong ratio to be shown
  - New
    - Add the possibility of specifying an interface without using the
      -i / --iface options (vnstat and vnstati)
